fix: SonarQube P0/P1 问题修复 — Bug 10→0, 漏洞 3→0, 可靠性 E→A, 安全性 D→A
P0 修复（数据一致性/安全）:
- S2229: PaymentServiceImpl @Transactional 自调用失效，4处 this.xxx() 改为 @Lazy 自注入代理调用
- S2095: 对账服务 HttpClient 资源泄漏，改用 try-with-resources
- S5443: WechatPayConfig 私钥写入公共可写临时目录，改用 ~/.beenest/certs 安全目录 + POSIX 权限 + 立即删除
- S4790: 抖音支付 MD5 签名添加 @SuppressWarnings（API 规范要求）
- S4502: CSRF 禁用添加 @SuppressWarnings（无状态 Token API，CSRF 不适用）

P1 修复（可靠性）:
- S6809: WalletServiceImpl @Transactional 自调用，3处改为 @Lazy 自注入代理调用
- S3077: CallbackIpWhitelistInterceptor 3个 volatile 字段合并为 AtomicReference<WhitelistConfig> 不可变 record
- S3077: AppCredentialService volatile List 改为 CopyOnWriteArrayList
- S2119: SecureRandom 提取为类字段复用
- S2184: int 乘法 5*60*1000 改为 5L*60*1000 防溢出
- S8700: WithdrawLimitChecker LocalDateTime 改为 ZonedDateTime(Asia/Shanghai) 保证时区一致

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>